# continuous-discovery-beacon

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PROJECT_TREE.txt  README.md  VALIDATION.md  docker-compose.yml  pyproject.toml
.github/workflows/: notify-beacon.yml
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py
app/adapters/: indexnow.py  local_artifacts.py
app/services/: dispatcher.py  events.py  feeds.py  url_normalizer.py
app/static/: app.css
app/templates/: dashboard.html
docs/: EveMissLab_CDB_部署方案決策_本地Agent審查回覆_v0.1.md  持續可發現性廣播器_概念與技術設計_v0.1.md
scripts/: bootstrap_demo.py  retry_worker.py
site-registry/: site-list.md
tests/: conftest.py  test_api.py
