[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "continuous-discovery-beacon"
version = "0.1.0"
description = "Event-driven website discovery and indexing signal MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic>=2.10,<3",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
